# mspmeter

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  msp430-elf-gcc.cmake
pcb/: meterkit.bak  meterkit.kicad_sym
pcb/devkit/: devkit.kicad_pcb  devkit.kicad_prl  devkit.kicad_pro  devkit.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
pcb/elabo/: elabo.kicad_pcb  elabo.kicad_prl  elabo.kicad_pro  elabo.kicad_sch  elabo_stencil.bak  elabo_window.bak
pcb/meterkit.pretty/: S290.kicad_mod  Sx39-1xxxxx.kicad_mod
src/: adc.hpp  calibration.hpp  config.hpp  future.hpp  main.cpp  meter.cpp  meter.hpp  msp430.hpp  msp430i2.cpp  msp430i2.hpp  msp430i2041.ld  print.hpp  readout.hpp  test.cpp  util.cpp  util.hpp
src/applications/: ccsrc.cpp
src/display/: draw.cpp  draw.hpp  fonts.cpp  fonts.hpp  frame_buffer.cpp  frame_buffer.hpp  frame_buffer_test.cpp  readout.hpp
src/drivers/: rotary_encoder.hpp  sh1107.cpp  sh1107.hpp
src/msp/: i2c.hpp  spi.hpp  uart.hpp
src/util/: 7segment.cpp  7segment.hpp  7segment_test.cpp  array.hpp  future.hpp  safeint.hpp
tools/: statistics.cpp
